crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__property_names_type_string_only.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"propertyNames\":{\"type\":\"string\"},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => true,
            _ => false,
        }
