crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__props_dependent_schemas.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"dependentSchemas\":{\"a\":{\"properties\":{\"b\":{}}}},\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.iter()
                    .all(|(__key, __value)| {
                        let key_str = __key.as_str();
                        if obj.contains_key("a") && (matches!(key_str, "b")) {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        }
