crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__props_guard_oneof_not_if.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"const\":1},{\"not\":{\"const\":2}},{\"if\":{\"type\":\"string\"},\"then\":{}}],\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
(match instance {
            __Value::Object(obj) => {
                obj.iter()
                    .all(|(__key, __value)| {
                        let key_str = __key.as_str();
                        if {
                            let mut __one_of_matches = 0usize;
                            let mut __one_of_evaluates = false;
                            if (|instance: &__Value| {
                                static EXPECTED: __Lazy<__sj::Number> = __Lazy::new(|| {
                                    __sj::from_str("1").expect("Failed to parse const number")
                                });
                                match instance {
                                    __Value::Number(n) => __cmp::equal_numbers(n, &*EXPECTED),
                                    _ => false,
                                }
                            })(instance) {
                                __one_of_matches += 1;
                                __one_of_evaluates = __one_of_evaluates || (false);
                            }
                            if (|instance: &__Value| validate_ref_0(
                                instance,
                            ))(instance) {
                                __one_of_matches += 1;
                                __one_of_evaluates = __one_of_evaluates || (false);
                            }
                            if (|instance: &__Value| validate_ref_1(
                                instance,
                            ))(instance) {
                                __one_of_matches += 1;
                                __one_of_evaluates = __one_of_evaluates
                                    || (if (|instance: &__Value| {
                                        instance.is_string()
                                    })(instance) {
                                        (false) || (false)
                                    } else {
                                        false
                                    });
                            }
                            __one_of_matches == 1 && __one_of_evaluates
                        } {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        })
            && ({
                let mut matched = is_branch_valid_0(instance);
                (if is_branch_valid_1(instance) {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }
                    && if is_branch_valid_2(instance) {
                        if matched {
                            false
                        } else {
                            matched = true;
                            true
                        }
                    } else {
                        true
                    }) && matched
            })
