crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__props_if_bool.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"if\":true,\"then\":{\"properties\":{\"a\":{}}},\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.iter()
                    .all(|(__key, __value)| {
                        let key_str = __key.as_str();
                        if if true {
                            (false) || (matches!(key_str, "a"))
                        } else {
                            false
                        } {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        }
