crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__props_nested_guard.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"anyOf\":[{\"allOf\":[{\"properties\":{\"a\":{}}}],\"not\":{\"required\":[\"z\"]}}],\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
(match instance {
            serde_json::Value::Object(obj) => {
                obj.iter()
                    .all(|(__key, __value)| {
                        let key_str = __key.as_str();
                        if (|instance: &serde_json::Value| validate_ref_0(
                            instance,
                        ))(instance) && (matches!(key_str, "a"))
                        {
                            true
                        } else {
                            false
                        }
                    })
            }
            _ => false,
        }) && ((is_branch_valid_0(instance)))
